                       User-Visible DocKnot Changes

DocKnot 3.03 (unreleased)

    For CPAN packages pushed to GitHub, add a Shields.io license badge to
    the Markdown README file.

    Skip the dist integration test if xz is not available.

    Stop leaking exceptions via $@ to the caller of App::DocKnot::Config.
    Configuration parsing catches and ignores a variety of errors, which
    previously were polluting the caller's $@.

DocKnot 3.02 (2020-01-08)

    Add support for the No Maintenance Intended badge in the Markdown
    README file if the package is marked as orphaned.

    If the native distribution generation commands create only a
    gzip-compressed tarball, generate an xz-compressed tarball from the
    gzip-compressed tarball during docknot dist.

    docknot dist now checks for files present in the source tree but
    missing from the distribution, apart from a (currently hard-coded)
    list of exceptions.

    docknot dist now removes any existing directory when creating a new
    distribution.  It overrides permissions if possible while doing this
    so that it can clean up from a failed Automake make distcheck, so the
    destination directory should be trusted, not one to which an attacker
    may be able to write files.

    Remove make warnings from the commands when building a distribution
    that supports C++ with the C++ compiler, since my current Autoconf
    warning flag discovery code doesn't properly exclude options that are
    unsupported by C++.

    Properly skip a test on Windows that requires tar.

DocKnot 3.01 (2019-07-14)

    docknot dist now also runs make check-cppcheck for Autoconf build
    systems.

    If the valgrind key is set to true in the package build metadata,
    docknot dist now also runs make check-valgrind for Autoconf build
    systems.

    Allow the path to Perl to be configured in App::DocKnot::Dist.  This
    is used primarily for testing so that we can try building a