@@ -7,5 +7,8 @@
     },
     "distribution": {
         "tarname": "Empty",
+        "ignore": [
+            "\\Aignored-file\\z",
+        ],
     },
 }
