@@ -66,7 +66,7 @@ if ($@ || !$result) {
     chdir($cwd);
     plan skip_all => 'git and tar not available';
 } else {
-    plan tests => 12;
+    plan tests => 13;
 }
 
 # Load the module.  Change back to the starting directory for this so that
@@ -85,11 +85,19 @@ chmod(0000, File::Spec->catfile($distdir, 'Empty', 'Build.PL'));
 # Setup finished.  Now we can create a distribution tarball.
 chdir($sourcedir);
 my $dist = App::DocKnot::Dist->new({ distdir => $distdir, perl => $^X });
-eval { capture_stdout { $dist->make_distribution() } };
+capture_stdout { eval { $dist->make_distribution() } };
 ok(-f File::Spec->catfile($distdir, 'Empty-1.00.tar.gz'), 'dist exists');
 ok(-f File::Spec->catfile($distdir, 'Empty-1.00.tar.xz'), 'xz dist exists');
 ok(!-f File::Spec->catfile($distdir, 'Empty-1.00.tar'), 'tarball missing');
 is($@, q{}, 'no errors');
+
+# If we add an ignored file to the source tree, this should not trigger any
+# errors.
+open($fh, '>', 'ignored-file');
+print {$fh} "Some data\n" or die "cannot write to some-file: $!\n";
+close($fh);
+capture_stdout { eval { $dist->make_distribution() } };
+is($@, q{}, 'no errors with ignored file');
 
 # If we add a new file to the source tree and run make_distribution() again,
 # it should fail, and the output should contain an error message about an
