@@ -5,11 +5,15 @@ DocKnot 3.03 (unreleased)
     For CPAN packages pushed to GitHub, add a Shields.io license badge to
     the Markdown README file.
 
-    Skip the dist integration test if xz is not available.
+    docknot dist now supports a distribution/ignore metadata setting,
+    which contains a list of regular expressions of files to ignore when
+    checking a distribution tarball for completeness.
 
     Stop leaking exceptions via $@ to the caller of App::DocKnot::Config.
     Configuration parsing catches and ignores a variety of errors, which
     previously were polluting the caller's $@.
+
+    Skip the dist integration test if xz is not available.
 
 DocKnot 3.02 (2020-01-08)
 
